# Multimodal-RAG-System

./: .env_sample  .gitignore  README.md  evaluate.py  main.py  mkdocs.yml  pyproject.toml
docs/: 01-que-es-rag.md  02-arquitectura.md  03-ingestion.md  04-retrieval.md  05-generation.md  06-sistemas-auxiliares.md  07-dificultades-y-soluciones.md  08-tecnicas-avanzadas.md  09-decisiones-diseno.md  10-flujo-final.md  index.md
docs/stylesheets/: extra.css
rag/: cli.py  config.py  exceptions.py  models.py  pipeline.py  providers.py
rag/chain/: __init__.py  cache.py  contextualizer.py  memory.py  prompts.py  router.py
rag/evaluation/: dataset.py  evaluator.py
rag/ingestion/: loader.py
rag/retrieval/: __init__.py  hybrid.py  hyde.py  parent.py  reranker.py  vector_store.py
tests/: conftest.py  test_chain.py  test_cli.py  test_config.py  test_exceptions.py  test_ingestion.py  test_models.py  test_pipeline.py  test_retrieval.py
